// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorCard should match the snapshot 1`] = `
<div
  className="ColorCard"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <div
    className="ColorCard__div--space"
  />
  <footer
    className="ColorCard__footer"
  >
    <MdCheckBoxOutlineBlank
      className="ColorCard__lock--icon"
      onClick={[Function]}
    />
    <h4
      className="ColorCard__h4"
    />
  </footer>
</div>
`;

exports[`ColorCard should match the snapshot when locked is true 1`] = `
<div
  className="ColorCard"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  <div
    className="ColorCard__div--space"
  />
  <footer
    className="ColorCard__footer"
  >
    <IoMdCheckboxOutline
      className="ColorCard__lock--icon"
      onClick={[Function]}
    />
    <h4
      className="ColorCard__h4"
    />
  </footer>
</div>
`;
